debian: Update with version 0.95.8-3 packaging.

--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,8 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
 LINGUAS           := $(patsubst po/%.po, %, $(wildcard po/*.po))
 
-WMAKER_OPTIONS := --disable-xlocale --enable-modelock --enable-pango --enable-xinerama
+WMAKER_OPTIONS := --disable-xlocale --enable-modelock --enable-pango \
+                  --enable-xinerama --enable-magick
 #not-enabled      --enable-usermenu --disable-shape --disable-shm --enable-randr
 #not-enabled      --disable-xpm --disable-png --disable-jpeg --disable-gif --disable-tiff
 
@@ -19,7 +20,7 @@ DEBIAN_TMP        := debian/tmp
 BASEDIR           := /usr
 INCLUDEDIR        := $(BASEDIR)/include
 SHAREDIR          := $(BASEDIR)/share
-GNUSTEPDIR        := $(SHAREDIR)/lib/GNUstep/System
+GNUSTEPDIR        := $(SHAREDIR)/GNUstep/System
 WMSHAREDIR        := $(SHAREDIR)/WindowMaker
 PIXMAPDIR         := $(INCLUDEDIR)/X11/pixmaps
 DEFSDATADIR       := /etc/GNUstep/Defaults
@@ -30,7 +31,7 @@ COMMON_OPTIONS    := --datadir=$(SHAREDIR)            \
                      --with-defsdatadir=$(DEFSDATADIR)
 
 %:
-	dh $@ --parallel
+	dh $@
 
 override_dh_auto_configure:
 	env LINGUAS="$(LINGUAS)" dh_auto_configure --verbose -- \
@@ -52,6 +53,9 @@ override_dh_install:
 
 
 	# Now, change the #wmdatadir# string to $(WMSHAREDIR)
+	# Remove this with next upstream release as replacement will be done
+	# during build.
+	# (http://repo.or.cz/wmaker-crm.git/commitdiff/d364aff)
 	perl -pi -e 's:#wmdatadir#:$(WMSHAREDIR):' `find $(DEBIAN_TMP)/$(WMSHAREDIR) -name plmenu.*`
 	perl -pi -e 's:#wmdatadir#:$(WMSHAREDIR):' $(DEBIAN_TMP)$(WMSHAREDIR)/wmmacros
 	perl -pi -e 's:#wmdatadir#:$(WMSHAREDIR):' $(DEBIAN_TMP)$(WMSHAREDIR)/plmenu
